src/objects/Contract_Ratification__c.object
<CustomObject>
    <description>UHW Contracts Ratifications</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contract_UHW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BU_Size__c</fullName>
        <label>BU Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>IF(
  AND(
    MONTH( Contract_Start_Date__c) = 2,
    DAY( Contract_Start_Date__c) = 29,
    NOT( 
      OR( 
        MOD( YEAR( Contract_Start_Date__c), 400 ) = 0, 
        AND( 
          MOD( YEAR( Contract_Start_Date__c), 4 ) = 0,
          MOD( YEAR( Contract_Start_Date__c), 100 ) != 0
        )
      )
    ) 
  ),
  DATE( YEAR( Contract_Start_Date__c) + VALUE(TEXT(Contract_Term__c)), 3, 1),
  DATE( YEAR( Contract_Start_Date__c) + VALUE(TEXT(Contract_Term__c)), MONTH( Contract_Start_Date__c), DAY( Contract_Start_Date__c) )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Ratification_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Ratification ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corporate_Name__c</fullName>
        <formula>Account_Name__r.Hospital_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_BU_Size__c</fullName>
        <description>Estimated BU Size use for Soft Reporting</description>
        <inlineHelpText>Estimated BU Size use for Soft Reporting</inlineHelpText>
        <label>Est BU Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiration_Notice__c</fullName>
        <label>Expiration Notice (days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facilty_Rep_Point__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilty Rep/Point</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Ratifications (Facilty Rep Point)</relationshipLabel>
        <relationshipName>Contract_Ratifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ratification_Date__c</fullName>
        <label>Ratification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ratification_Location__c</fullName>
        <label>Ratification Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratification_Times__c</fullName>
        <label>Ratification Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>In Approval Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A survey response is created for each attended &amp; voted member.</inlineHelpText>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipName>Contracts_UHW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Ballots_Casts__c</fullName>
        <label>Total Ballots Casts</label>
        <summaryFilterItems>
            <field>Contract_Ratification_BU_Member__c.Voted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Ratification_BU_Member__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_COPE_Collected__c</fullName>
        <label>Total COPE #</label>
        <summaryFilterItems>
            <field>Contract_Ratification_BU_Member__c.COPE_New_Amount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Ratification_BU_Member__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_COPE__c</fullName>
        <description>New COPE Collected Amount</description>
        <label>Total COPE $</label>
        <summarizedField>Contract_Ratification_BU_Member__c.COPE_New_Amount__c</summarizedField>
        <summaryForeignKey>Contract_Ratification_BU_Member__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Current_COPE__c</fullName>
        <description>Current COPE Pledge</description>
        <label>Total Current COPE $</label>
        <summarizedField>Contract_Ratification_BU_Member__c.COPE_Pledge__c</summarizedField>
        <summaryForeignKey>Contract_Ratification_BU_Member__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Increase_New_COPE_D__c</fullName>
        <label>Total Increase/New COPE $</label>
        <summarizedField>Contract_Ratification_BU_Member__c.Inc_or_New_COPE_Amount__c</summarizedField>
        <summaryForeignKey>Contract_Ratification_BU_Member__c.Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Increase_New_COPE__c</fullName>
        <label>Total Increase/New COPE #</label>
        <summaryFilterItems>
            <field>Contract_Ratification_BU_Member__c.Inc_New_COPE__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Ratification_BU_Member__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_Votes__c</fullName>
        <inlineHelpText>Enter total number of &quot;No&quot; votes.</inlineHelpText>
        <label>Total No Votes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Void_Votes__c</fullName>
        <inlineHelpText>Enter total number of &quot;Void&quot; votes.</inlineHelpText>
        <label>Total Void Votes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Voted_Pct__c</fullName>
        <formula>Total_Voted__c /  BU_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Voted %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Voted__c</fullName>
        <label>Total Voted</label>
        <summaryFilterItems>
            <field>Contract_Ratification_BU_Member__c.Voted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Contract_Ratification_BU_Member__c.Contract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Voted_soft__c</fullName>
        <formula>IF(Est_BU_Size__c &gt; 0, Total_Voted__c / Est_BU_Size__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Voted % (soft)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Yes_Votes__c</fullName>
        <inlineHelpText>Enter total number of &quot;Yes&quot; votes.</inlineHelpText>
        <label>Total Yes Votes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Turn_Out_COPE__c</fullName>
        <formula>Total_Increase_New_COPE__c  /    BU_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turn Out COPE% (Increase or New)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Turn_Out_COPE_soft__c</fullName>
        <formula>IF(Total_Voted__c &gt; 0, Total_Increase_New_COPE__c /  Total_Voted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turn Out COPE % (soft)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Turn_Out_Yes__c</fullName>
        <formula>IF( BU_Size__c  &gt; 0, Total_Yes_Votes__c /  BU_Size__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turn Out Yes %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Turn_Out_Yes_soft__c</fullName>
        <formula>IF(Est_BU_Size__c &gt; 0, Total_Yes_Votes__c / Est_BU_Size__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turn Out Yes % (soft)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Witness_1_Full_Name__c</fullName>
        <label>Witness 1 Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Witness_2_Full_Name__c</fullName>
        <label>Witness 2 Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Ratification</label>
    <listViews>
        <fullName>Ratification_Date_3_12_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/12/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-12-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_13_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/13/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-13-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_14_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/14/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-14-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_15_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/15/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-15-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_16_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/16/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-16-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_6_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/6/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-06-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_7_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/7/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-07-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_8_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/8/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-08-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_3_9_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/9/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-09-2018</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ratification_Date_5_6_2018</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Ratification_Location__c</columns>
        <columns>Ratification_Date__c</columns>
        <columns>Ratification_Times__c</columns>
        <columns>BU_Size__c</columns>
        <columns>Est_BU_Size__c</columns>
        <columns>Total_Yes_Votes__c</columns>
        <columns>Total_No_Votes__c</columns>
        <columns>Total_Void_Votes__c</columns>
        <columns>Facilty_Rep_Point__c</columns>
        <columns>Witness_1_Full_Name__c</columns>
        <columns>Witness_2_Full_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Corporate_Name__c</field>
            <operation>contains</operation>
            <value>Dignity</value>
        </filters>
        <filters>
            <field>Ratification_Date__c</field>
            <operation>equals</operation>
            <value>3/5/2018</value>
        </filters>
        <filters>
            <field>Ratification_Times__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ratification Date 3-05-2018</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Contract Ratification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Ratifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>